2003-03-06 Stephane ANCELOT <sancelot@free.fr>
	* enhanced grepview, there is no need to display the filename in each line

2003-03-06 Roberto Raggi <roberto@kdevelop.org>
	* Added support for tmake projects
	* Added template for QTopia 1.6

2003-03-05 Alexander Dymo <cloudtemple@mksat.net>
    * Documentation browser is now able to handle all Qt documentation including
      custom *.xml documentation. Configuration options are also available.
    * GTK tocs renamed to GNOME 1.0 API Reference. Incorrect links fixed, Bonobo
      chapter included. More to come.
    * Started adding W3C TR tocs to the documentation browser.

2003-03-02 F@lk Brettschneider <falkbr@kdevelop.org>
	* completed the new behaviour of the make-output view
	  (can be configured via contextmenu or Gideon settings dialog)

2003-03-01  Roberto Raggi <roberto@kdevelop.org>
	* added javahello template to appwizard

2003-02-28  Roberto Raggi <roberto@kdevelop.org>
	* reenabled java support
	* removed obsolete kdevelop java plugin template

2003-02-27  Victor Rder  <victor_roeder@gmx.de>
* Started to restructure the Autoproject part
	-> Splitted AutoProjectWidget in
	   * AutoSubprojectView
	   * AutoDetailsView
	   * AutoListViewItems
	   * AutomakeManager (not finished)
	-> More to come
	-> However, an auto-tools expert would be nice now
* Made the "C++ new class dialog" a little bit nicer

2003-02-27 F@lk Brettschneider <falkbr@kdevelop.org>
	* make-outputview: now context menu allows to disable line wrapping, to set a short and smart compiler output (good for novices) and to suppress directory navigation messages. (TODO: save this to KConfig)

2003-02-26  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
	* parts/cppsupport: fix nasty inner class bug (part of bug 45998). Determine
        whether we are at global scope, and then insert class/struct accordingly to
        class store. This one goes for you Roberto ;)

2003-02-26 jbb <jbb@kdevelop.org>
    * parts/debugger